
Package: PSCBS
==============

Version: 0.38.3 [2013-10-14]
o Now the package vignettes are in vignettes/ and not in inst/doc/,
  which will not be supported by R (>= 3.1.0).


Version: 0.38.2 [2013-10-13]
o BUG FIX: While attaching the package, it could cause a cyclic 
  loading of namespaces.


Version: 0.38.1 [2013-10-08]
o Now getSmoothLocusData() for CBS also returns column 'count' which
  specifies the number of (finite) loci averaged over in each bin.
o DOCUMENTATION: Vignette 'Total copy-number segmentation using CBS'
  would display the same plot as vignette 'Parent-specific copy-number
  segmentation using Paired PSCBS'.
o DOCUMENTATION: Renamed vignette 'Paired PSCBS' to 'Parent-specific
  copy-number segmentation using Paired PSCBS'.
o BUG FIX: tileChromosomes() for CBS did not set "tiledChromosomes"
  attribute due to a typo.  This caused plotTracks() for CBS to
  horizontally misplace the plotted segment levels.
  Added a system tests for this for CBS and PairedPSCBS objects.
  Thanks to Ilari Scheinin at VUMC for reporting on this.
o Bumped up package dependencies.


Version: 0.38.0 [2013-09-27]
o SPEEDUP: 'R CMD check' is now significantly faster due to
  copying of pre-generated calculatations ("memoization").
  For instance, the the same segmentation tests are roughly
  40% faster with this version compared to v0.37.2.
o Now PSCBS imports 'R.cache' (used to only suggest it).


Version: 0.37.2 [2013-09-27]
o SPEEDUP: Now utilizing 'matrixStats' functions in more places.
o ROBUSTNESS: Further improved how aroma.light is handled for
  backward compatibility.
o Bumped up package dependencies.


Version: 0.37.1 [2013-09-26]
o CLEANUP: Now package avoids attaching suggested packages such as
  'R.cache', 'aroma.light', and 'Hmisc' by only importing the set of
  functions needed via '::'.  This way those packages are only loaded.
  Packages that still need to be attached are done so "quietly".